# change

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: subdomains_example.txt
examples/sample_output/: attack_paths.sample.json  drift_events.sample.json
sosassure/: cli.py  discovery.py  engine.py  ledger.py  models.py  providers.py  reporting.py  scoring.py  utils.py
tests/: test_drift.py  test_hashing.py  test_idp.py  test_reachability.py
