[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sosassure"
version = "0.1.0"
description = "Identity-Centric Assurance Engine MVP"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sosassure = "sosassure.cli:main"

[tool.setuptools.packages.find]
include = ["sosassure*"]
